feat: send manager message
